--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,8 @@
+Wed Feb 25 03:40:31 2004  Tim Janik  <timj@gtk.org>
+
+	* bsemidifile.c (bse_midi_file_setup_song): fix note insertion
+	(use bse-part-insert-note-auto).
+
 Mon Feb 23 05:13:34 2004  Tim Janik  <timj@gtk.org>
 
 	* bsedefs.h: 
