--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,8 @@
+Wed Feb 25 06:00:15 2004  Tim Janik  <timj@gtk.org>
+
+	* bsescripthelper.c: invoke bsesh with BSE version as
+	$BSE_PATH_BINARIES/bsesh-$BSE_VERSION.
+
 Wed Feb 25 03:40:31 2004  Tim Janik  <timj@gtk.org>
 
 	* bsemidifile.c (bse_midi_file_setup_song): fix note insertion
