--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,16 @@
+Thu Feb 26 20:37:57 2004  Tim Janik  <timj@gtk.org>
+
+	* glib-extra.[hc]: removed legacy v_int parsing code from GScanner,
+	use v_int64 solely now. renamed creation function to g_scanner_new64(),
+	to catch old glib scanner uses.
+
+	* testsfi.c:
+	* sfistore.c:
+	* sficomport.c: 64bit integer scanning fixes.
+
+	* sfidl-parser.[hc]*: 64bit parsing ans Constant handling fixes, allow '+'
+	as number sign besides '-'.
+
 Wed Feb 25 14:46:33 2004  Tim Janik  <timj@gtk.org>
 
 	* sficomwire.c (sfi_com_spawn_async): drop nice-level after forking.
