--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Fri Feb 27 06:17:37 2004  Tim Janik  <timj@gtk.org>
+
+	* configure.in: up version to 0.6.1, interface 0, binary 0.
+
+	* beast-gtk/bstcanvaslink.c:
+	* beast-gtk/bstcanvassource.c: adapt to BseSource changes.
+
 Wed Feb 25 14:34:51 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/suidmain.c: added suidwrapper program without dependancies,
