--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Feb 27 06:42:01 2004  Tim Janik  <timj@gtk.org>
+
+	* launchers/: added new directory to hold beast and bsesh
+	launcher programs and suid wrappers.
+
 Fri Feb 27 06:17:37 2004  Tim Janik  <timj@gtk.org>
 
 	* configure.in: up version to 0.6.1, interface 0, binary 0.
