--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,9 @@
+Tue Mar  2 10:33:55 2004  Tim Janik  <timj@gtk.org>
+
+	* sfidl-parser.cc (parseInfoOptional): lowercase info keys before
+	entering (key,value) pairs into the info map, since all read-outs
+	use lowercase keys.
+
 Tue Mar  2 10:22:26 2004  Tim Janik  <timj@gtk.org>
 
 	* sfitypes.[hc]: removed sfi_boxed_make_record(),
