--- a/TODO
+++ b/TODO
@@ -1,4 +1,9 @@
 FIXMES:
+- PatternEditor: implement vzoom
+- PatternEditor: fix entering the first note for channels > 1
+- PatternEditor: implement base octave
+- PatternEditor: implement last tick changes
+- PatternEditor: implement focus to mouse clicks
 - remove bse_glue_make_rorecord() and siblings
 - fix bse_gettext()
 - piano roll/align events: does insert notes with wrong cursor
