implemented base_octave parameter.
Tue Mar  2 12:47:45 2004  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstpatternctrl.[hc]: implemented base_octave parameter.

        * library/keys/keyrc.de: adjust note insertion numbers to be octave-0
        relative.

        * beast-gtk/bstpartdialog.c: display base octave.

        * beast-gtk/bstpatterncolumns.c: change notes without resetting
        velocity, fine_tune etc.

        * beast-gtk/gxk/gxkparam.c: validate parameter values after updates
        for simple value bindings.

svn path=/trunk/; revision=2077

--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 FIXMES:
+- PatternEditor: load default keytable
 - PatternEditor: implement vzoom
 - PatternEditor: fix entering the first note for channels > 1
-- PatternEditor: implement base octave
 - PatternEditor: implement last tick changes
 - PatternEditor: implement focus to mouse clicks
 - remove bse_glue_make_rorecord() and siblings
