--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+Tue Mar  2 12:47:45 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstpatternctrl.[hc]: implemented base_octave parameter.
+
+	* library/keys/keyrc.de: adjust note insertion numbers to be octave-0
+	relative.
+
+	* beast-gtk/bstpartdialog.c: display base octave.
+
+	* beast-gtk/bstpatterncolumns.c: change notes without resetting
+	velocity, fine_tune etc.
+
+	* beast-gtk/gxk/gxkparam.c: validate parameter values after updates
+	for simple value bindings.
+
 Tue Mar  2 10:20:54 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/gxk/gxkscrollcanvas.c:
