--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Mar  4 14:49:46 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/gxk/gxkmenubutton.c: reset button prelight across popups
+	but preserve relief.
+
 Thu Mar  4 14:31:42 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/gxk/gxkmenubutton.[hc]: save backing during popups.
